New Level Added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -94,7 +94,7 @@ AgentMaxSlope=44.000000
 AgentMaxStepHeight=35.000000
 MinRegionArea=0.000000
 MergeRegionSize=400.000000
-MaxVerticalMergeError=2147483647
+MaxVerticalMergeError=2
 MaxSimplificationError=1.300000
 SimplificationElevationRatio=0.000000
 MaxSimultaneousTileGenerationJobsCount=1024
