--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/PrototypeDemo.PrototypeDemo
+EditorStartupMap=/Game/PrototypeDemo.PrototypeDemo
 GlobalDefaultGameMode="/Script/AnimalPuzzle.AnimalPuzzleGameMode"
 
 [/Script/Engine.RendererSettings]
