--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,5 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/PrototypeDemo.PrototypeDemo
+GameDefaultMap=/Game/Levels/Title.Title
 EditorStartupMap=/Game/Levels/PrototypeDemo.PrototypeDemo
 GlobalDefaultGameMode="/Script/AnimalPuzzle.AnimalPuzzleGameMode"
 
