Start of blockout

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/Title.Title
-EditorStartupMap=/Game/Levels/PrototypeDemo.PrototypeDemo
+EditorStartupMap=/Game/Levels/GrassyHill.GrassyHill
 GlobalDefaultGameMode="/Script/AnimalPuzzle.AnimalPuzzleGameMode"
 
 [/Script/Engine.RendererSettings]
