Still needs tree decorator

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Dynamic/Levels/GrassyHill.GrassyHill
 EditorStartupMap=/Game/Dynamic/Levels/GrassyHill.GrassyHill
-GlobalDefaultGameMode="/Script/AnimalPuzzle.AnimalPuzzleGameMode"
+GlobalDefaultGameMode=/Game/Static/GamemodeAnimal.GamemodeAnimal_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
