--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -88,13 +88,13 @@ CellHeight=11.000000
 NavMeshResolutionParams[0]=(CellSize=99.310349,CellHeight=10.000000,AgentMaxStepHeight=15.000000)
 NavMeshResolutionParams[1]=(CellSize=20.000000,CellHeight=11.000000,AgentMaxStepHeight=15.000000)
 NavMeshResolutionParams[2]=(CellSize=30.315790,CellHeight=12.000000,AgentMaxStepHeight=15.000000)
-AgentRadius=34.000000
-AgentHeight=10.000000
-AgentMaxSlope=34.032001
+AgentRadius=109.161880
+AgentHeight=677.941101
+AgentMaxSlope=59.664005
 AgentMaxStepHeight=35.000000
 MinRegionArea=0.000000
-MergeRegionSize=400.000000
-MaxVerticalMergeError=2
+MergeRegionSize=1060.016113
+MaxVerticalMergeError=431
 MaxSimplificationError=1.300000
 SimplificationElevationRatio=0.000000
 MaxSimultaneousTileGenerationJobsCount=1024
