--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Dynamic/Levels/Title.Title
-EditorStartupMap=/Game/Dynamic/Levels/Title.Title
+EditorStartupMap=/Game/Dynamic/Levels/TestLevel.TestLevel
 GlobalDefaultGameMode=/Game/Static/GamemodeAnimal.GamemodeAnimal_C
 
 [/Script/Engine.RendererSettings]
