--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -11,9 +11,12 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 FullRebuild=True
-IncludeDebugFiles=True
+IncludeDebugFiles=False
 Build=Always
-BuildConfiguration=PPBC_DebugGame
+BuildConfiguration=PPBC_Shipping
+IncludePrerequisites=False
+ForDistribution=False
+bSkipEditorContent=False
 
 [/Script/Engine.AssetManagerSettings]
 -PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
